--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">PG PAUD</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                           UNIVERSITAS NEGERI JAKARTA
                             <br />
-                            Clark, MO 65243
+                            Rawamangun Jakarta Timur
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -252,7 +252,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2023</small></div>
+            <div class="container"><small>Copyright &copy; Nila Fitria 2023</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
