--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                        <h4 class="text-uppercase mb-4">About BASIRU</h4>
                         <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
-                            <a href="http://startbootstrap.com">Start Bootstrap</a>
+                            BASIRU, dibuat untuk para praktisi PAUD
+                          
                             .
                         </p>
                     </div>
