--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Video Pembelajaran semoga bermanfaat dan dapat dijadikan referensi untuk diterapkan sesuai dengan kebutuhan</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Jika ada video pembelajaran yang ingin di tampilkan di sini bisa kontak via email ya..</p></div>
                 </div>
 
                 <html>
