--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     
-               <iframe style="width:100%;height:640" src="https://fliphtml5.com/bookcase/sxsor/gold"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
+               <iframe style="width:100%;height:820" src="https://fliphtml5.com/bookcase/sxsor/gold"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
 
         
         <!-- About Section-->
@@ -153,7 +153,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Video Pembelajaran semoga bermanfaat dan dapat dijadikan referensi untuk diterapkan sesuai dengan kebutuhan</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Video pembelajaran di sini semoga bermanfaat dan dapat dijadikan referensi untuk diterapkan sesuai dengan kebutuhan</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Jika ada video pembelajaran yang ingin di tampilkan di sini bisa kontak via email ya..</p></div>
                 </div>
 
