--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     
-               <iframe style="width:100%;height:120%" src="https://fliphtml5.com/bookcase/sxsor/gold"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
+               <iframe style="width:100%;height:1024px" src="https://fliphtml5.com/bookcase/sxsor/gold"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
 
         
         <!-- About Section-->
