--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="/dist/assets/img/nila4.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="/dist/assets/img/logobasiru.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">BASIRU </h1>
                 <!-- Icon Divider-->
