--- a/index.html
+++ b/index.html
@@ -157,23 +157,13 @@
                     <div class="col-lg-4 me-auto"><p class="lead">Jika ada video pembelajaran yang ingin di tampilkan di sini bisa kontak via email ya..</p></div>
                 </div>
 
-                <html>
-<body>
-
-<iframe width="420" height="345" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/HHWnDmyYbVs?si=2g3pCtblR0vN43zJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>">
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/HHWnDmyYbVs?si=2g3pCtblR0vN43zJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>">
 </iframe>
 
-</body>
-</html>
-
-
-<html>
-<body>
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uXqNE04mY_o?si=5DHePHr319gjx0OQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</body>
-</html>
+
 
                 
                 <!-- About Section Button-->
