--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    <a class="btn btn-xl btn-outline-light" href="https://www.youtube.com/@nilafitria2119/videos">
+                        <i class="fa fa-youtube-play"></i>
                         Video Lengkapnya!
                     </a>
                 </div>
