--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uXqNE04mY_o?si=5DHePHr319gjx0OQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-
+<button style="font-size:24px">Video Lengkapnya <i class="fa fa-youtube-play"></i></button>
                 
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
