--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </section>
 <!-- About Buku-->
         <section class="page-section bg-primary text-white mb-0" id="buku">
-            <div class="container">
+            <div class="container"></div>
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">Buku</h2>
                 <!-- Icon Divider-->
