--- a/index.html
+++ b/index.html
@@ -161,7 +161,21 @@
   
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uXqNE04mY_o?si=5DHePHr319gjx0OQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-         
+
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); grid-gap: 20px;">
+
+                    <div style="background-color: whitesmoke; padding: 15px;">
+    <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Pine Siskin</h3>
+    <div style="position: relative; width: 100%; padding-top: 56.25%;">
+      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/HHWnDmyYbVs?si=2g3pCtblR0vN43zJ" title="Pine Siskin" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+
+<div style="background-color: whitesmoke; padding: 15px;">
+    <h3 style="border-bottom: 1px solid; margin: 0 0 8px 0; font-size: 18px; font-weight: 600;">Lifecycle of Salmon</h3>
+    <div style="position: relative; width: 100%; padding-top: 56.25%;">
+      <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/uXqNE04mY_o?si=5DHePHr319gjx0OQ" title="Salmon Lifecycle with Ranger Tessa" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+                        
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://www.youtube.com/@nilafitria2119/videos">
