--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
+                                    <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="Jurnal" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Jurnal yang telah terbit</p>
