--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                                <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
+                                
                             </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="..." />
+                            <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -299,8 +299,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
-                                    <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="Jurnal" />
+                                                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="Jurnal" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Jurnal yang telah terbit</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
