--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                 
                             </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>" />
+                            <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
