--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
+                                    <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Jurnal Ilmiah</h2>
                                     <!-- Icon Divider-->
