--- a/index.html
+++ b/index.html
@@ -293,7 +293,21 @@
                                     <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
                                                                     
                                     </div>
-                                  
+                                   <!-- Portfolio Modal - Image-->
+                                                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="Jurnal" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-4">Jurnal yang telah terbit</p>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal 2-->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2" aria-hidden="true">
             <div class="modal-dialog modal-xl">
