--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
-                                                                    
+                                          
                                     </div>
                                    <!-- Portfolio Modal - Image-->
-                                                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="Jurnal" />
+                                                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="<img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe> />
+                            <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Jurnal yang telah terbit</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
