--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="/dist/assets/img/portfolio/galeri.png"  alt="..." />
+                            <img class="img-fluid" src="/dist/assets/img/portfolio/galeri.png"  alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -293,7 +293,7 @@
                                           
                                     </div>
                                    <!-- Portfolio Modal - Image-->
-                                                                     <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/jurnal.png" alt="<img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe> />
+                                                                    
                             <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal.png" alt="<iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Jurnal yang telah terbit</p>
