--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                             </div>
                             <img class="img-fluid" src="/dist/assets/img/portfolio/jurnal1.png" alt="..." />
                                       </div>
+                         </div>
                                                          <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
