--- a/index.html
+++ b/index.html
@@ -367,8 +367,7 @@
     src="https://www.canva.com/design/DAGSfkPic6Q/JVK_PYTPvYUj8WiwBV--sQ/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGSfkPic6Q&#x2F;JVK_PYTPvYUj8WiwBV--sQ&#x2F;watch?utm_content=DAGSfkPic6Q&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Keterampilan mengajar membuat variasi dalam mengajarkan menulis</a> by Nila Fitria
-                                 
+<a href="https://www.canva.com/design/DAGSfkPic6Q/JVK_PYTPvYUj8WiwBV--sQ/watch" target="_blank" rel="noopener">Keterampilan mengajar membuat variasi dalam mengajarkan menulis</a> by Nila Fitria
                             </div>
                         </div>
                     </div>
