--- a/index.html
+++ b/index.html
@@ -362,7 +362,11 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
 
- <a href="video.html">Go to Page 2</a> 
+ <body> 
+    <h1>Welcome to Page 1</h1> 
+    <a href="page2.html">Go to Page 2</a> 
+     </body> 
+
 
                                     
                             </div>
