--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
  <body> 
     <h1>Welcome to Page 1</h1> 
-    <a href="page2.html">Go to Page 2</a> 
+    <a href="video.html">Go to Page 2</a> 
      </body> 
 
 
