--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-5b3a81cb-1e37-4396-972a-471f555b23f6" data-elfsight-app-lazy></div>
+                                   <iframe style="width:100%;height:100%" src="https://fliphtml5.com/bookcase/lcqqw/red"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
                                 </div>
                             </div>
                         </div>
