--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
         <meta name="author" content="" />
         <title>BASIRU.MY.ID</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/dist/assets/logobasiru.ico" />
+        <link rel="icon" type="image/x-icon" href="./dist/assets/logobasiru.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/dist/css/styles.css" rel="stylesheet" />
+        <link href="./dist/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="/dist/assets/img/logobasiru.png" alt="..." />
+                <img class="masthead-avatar" src="./dist/assets/img/logobasiru.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">BASIRU </h1>
                 <!-- Icon Divider-->
@@ -31,13 +31,14 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"><a href="./quiz" class="btn btn-primary">Klik Disini Untuk Melanjutkan</a</p>
+                <p class="masthead-subheading font-weight-light mb-0">Pengembangan Kompetensi Guru</p>
+                <center><a href="./quiz" class="btn btn-danger">Klik Disini Untuk Melanjutkan</a></center>
             </div>
         </header>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="/dist/js/scripts.js"></script>
+        <script src="./dist/js/scripts.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
