--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body id="page-top">
         <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
+        <header class="masthead bg-primary text-white text-center mt-0">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar" src="./dist/assets/img/logobasiru.png" alt="..." />
