--- a/quiz/index.html
+++ b/quiz/index.html
@@ -10,7 +10,7 @@
     <div id="quiz"></div>
     <div id="result" class="result"></div>
     <button id="submit" class="button">Submit</button>
-    <a href="./dashboard.html" id="retry" class="button hide">Lanjutkan</a>
+    <a href="../dashboard.html" id="retry" class="button hide">Lanjutkan</a>
     <button id="showAnswer" class="button hide">Show Answer</button>
   </div>
   <script src="script.js"></script>
