--- a/quiz/index.html
+++ b/quiz/index.html
@@ -11,7 +11,7 @@
     <div id="result" class="result"></div>
     <button id="submit" class="button">Submit</button>
     <a href="../dashboard.html" id="retry" class="button hide">Lanjutkan</a>
-    <button id="showAnswer" class="button hide">Show Answer</button>
+    <button id="showAnswer" class="button hide">Perlihatkan Jawaban</button>
   </div>
   <script src="script.js"></script>
 </body>
