--- a/dashboard.html
+++ b/dashboard.html
@@ -83,7 +83,7 @@
                 <i class="fas fa-plus fa-3x"></i>
             </div>
         </div>
-        <img class="img-fluid" src="/dist/assets/img/portfolio/galeri1.png" alt="Galeri portfolio item" />
+        <img class="img-fluid" src="/dist/assets/img/portfolio/galeri1.png" alt="..." />
     </div>
 </div>
 
