--- a/dashboard.html
+++ b/dashboard.html
@@ -492,7 +492,7 @@ document.getElementById('gform').onload = function(){
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycby_4PJMx2ux0-an1H_y8TsC3FWmxuvLNncD3-F4DaqBN3wyfpp6wdwdheVYBXyBXjzvDA/exec'
+  const scriptURL = https://script.google.com/macros/s/AKfycbwpYLFWyCQeJEYGaEia637fbOatTwpZNHq_qaqRHTi48wM33Jk6VzfLnD9F3T-V7mwlYw/exec'
   const form = document.forms['KontakBasiru']
 
   form.addEventListener('submit', e => {
