--- a/dashboard.html
+++ b/dashboard.html
@@ -226,11 +226,15 @@ document.getElementById('gform').onload = function(){
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
+                        <div class="alert alert-warning alert-dismissible fade show my-alert" role="alert">
+                          <strong>Terima Kasih!</strong>, Pesan anda sudah kami terima.
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
                         <form name="KontakBasiru">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="nama" name="nama" type="text" placeholder="Enter your name..." />
-                                <label for="name">Full name</label
+                                <label for="name">Full name</label>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
