--- a/dashboard.html
+++ b/dashboard.html
@@ -255,8 +255,8 @@ document.getElementById('gform').onload = function(){
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl" type="submit">Send</button>
-                            <button type="button" class="btn btn-secondary btn-lg" disabled>Loading...</button>
+                            <button class="btn btn-primary btn-xl btn-kirim" type="submit">Send</button>
+                            <button type="button" class="btn btn-secondary btn-lg btn-loading" disabled>Loading...</button>
                         </form>
                     </div>
                 </div>
