--- a/dashboard.html
+++ b/dashboard.html
@@ -226,7 +226,7 @@ document.getElementById('gform').onload = function(){
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
-                        <div class="alert alert-warning alert-dismissible fade show my-alert" role="alert">
+                        <div class="alert alert-warning alert-dismissible fade show my-alert d-none" role="alert">
                           <strong>Terima Kasih!</strong>, Pesan anda sudah kami terima.
                           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
@@ -256,7 +256,7 @@ document.getElementById('gform').onload = function(){
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
                             <button class="btn btn-primary btn-xl btn-kirim" type="submit">Send</button>
-                            <button type="button" class="btn btn-secondary btn-lg btn-loading" disabled>Loading...</button>
+                            <button type="button" class="btn btn-secondary btn-xl btn-loading d-none" disabled>Loading...</button>
                         </form>
                     </div>
                 </div>
