--- a/dashboard.html
+++ b/dashboard.html
@@ -135,7 +135,7 @@
 			</div>
 		</section>
 		<!-- Portfolio Section-->
-		<!-- About Buku-->
+		<!-- About Perpustakaan-->
         <section class="page-section bg-primary text-white mb-0" id="buku">
             <div class="container-fluid">
                 <!-- About Section Heading-->
@@ -152,7 +152,24 @@
                <iframe style="width:100%;height:640px" src="https://fliphtml5.com/bookcase/sxsor/gold"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
 			</div>
 		</section>
-        
+
+        <!-- About Buku Saku-->
+        <section class="page-section bg-primary text-white mb-0" id="bukusaku">
+            <div class="container-fluid">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">Buku Saku</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row"></div>
+                    
+               <div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/afhqr/jurd/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+			</div>
+		</section>
         <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
