--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
         <title>BASIRU.MY.ID</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="./dist/assets/logobasiru.ico" />
-        <!-- Font Awesome icons -->
+        <!-- Font Awesome iconss -->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
