--- a/dashboard.html
+++ b/dashboard.html
@@ -338,10 +338,10 @@
                             </ul>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">VIDEO</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#refleksi">Refleksi Diri</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#refleksi">QUIZ</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./quiz">
-                            <i class="fas fa-question-circle"></i> Quiz
+                            <i class="fas fa-question-circle"></i> Q&A
                         </a></li>
                     </ul>
                 </div>
@@ -766,7 +766,7 @@
         <section class="page-section bg-primary text-white mb-0" id="refleksi">
             <div class="container-fluid">
                 <!-- Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Refleksi Diri</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Quiz</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
